--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,5 +12,64 @@
 <body>
     <script type="module" src="static/js/app.js"></script>
     <div id="content" class="container"></div>
+</body>
+</html>-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background-color: #e6f7ff; /* Light blue background */
+            font-family: 'Cursive', sans-serif;
+            color: #004080; /* Dark blue text color */
+            text-align: justify;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh; /* Center content vertically */
+            margin: auto;
+            width: 50vw;
+        }
+
+        h1 {
+            color: #cc0000; /* Red heading color */
+            text-shadow: 2px 2px 4px #004080; /* Dark blue text shadow */
+        }
+
+        p {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        /* Christmas decorations */
+
+        .christmas-tree {
+            color: #228B22; /* Forest green color */
+        }
+    </style>
+    <title>Jõulud 23</title>
+</head>
+<body>
+    <p class="christmas-tree">✲˚·.˚✲˚·.˚✲˚·.˚✲</p>
+    <p>Jõuluvana oli elevil ja valmis järjekordseks imeliseks jõuludeks, kuid oh ei! Midagi kohutavat oli juhtunud. Jõuluvana armastatud kingid, mille ta oli hoolikalt valinud, olid kuidagi kaduma läinud. Kingitusi hoidvad armsad ning usaldusväärsed kaaslased, Tomek ja Pille, olid meeleheitel, kui nad teada said, et kingid olid kadunud. Nüüd seisid nad silmitsi suure väljakutsega: kuidas leida kaduma läinud kingid ja päästa jõulud?</p>
+    <p>Jõuluvana ei jäänud jonni, vaid otsustas, et tal on vaja abi, et leida kingitused õigeaegselt tagasi. Ta kutsus appi kõik seiklushimulised, nutikad ja julged mängijad, et aidata tal iga detsembri päeva kohta lahendada üks mõistatuslik ülesanne. Iga päev avaneb uus küsimus, mis juhatab neid läbi lumiste metsade, salapäraste koobaste ja sädelevate jõulumaade.</p>
+    <p>Tomek ja Pille on pühendunud oma ülesannete täitmisele ning otsivad vihjeid, mis aitaksid neil jõuda ühest päevast teise. Mängijad peavad kasutama oma nutikust, loogilist mõtlemist ja loovust, et aidata neil igapäevaseid väljakutseid ületada. Iga õigesti lahendatud ülesanne viib neid lähemale kadunud kingituste leidmisele ning kogu jõulumeeleolu taastamisele.</p>
+    <p>Seiklus on täis põnevust, ootamatuid pöördeid ja salapärasust ning mängijatel on võimalus kogeda jõulumaagiat, kui nad aitavad Jõuluvanal ja tema ustavatel kaaslastel leida kadunud kingitusi. Kas mängijad suudavad lahendada kõik 24 mõistatuslikku ülesannet ja taastada rõõmu kogu maailma jõuludeks? Selgub vaid siis, kui nad astuvad sisse sellesse lumisesse seiklusmaailma!</p>
+    <p>Kui olete valmis aitama Jõuluvanal kingid üles leida, vajutage <a href="https://github.com/kalamaja1/joul23"><strong>siia</strong></a>.</p>
+    <p class="christmas-tree">✲˚·.˚✲˚·.˚✲˚·.˚✲</p>
 </body>
 </html>
