--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
     <p>Jõuluvana ei jäänud jonni, vaid otsustas, et tal on vaja abi, et leida kingitused õigeaegselt tagasi. Ta kutsus appi kõik seiklushimulised, nutikad ja julged mängijad, et aidata tal iga detsembri päeva kohta lahendada üks mõistatuslik ülesanne. Iga päev avaneb uus küsimus, mis juhatab neid läbi lumiste metsade, salapäraste koobaste ja sädelevate jõulumaade.</p>
     <p>Tomek ja Pille on pühendunud oma ülesannete täitmisele ning otsivad vihjeid, mis aitaksid neil jõuda ühest päevast teise. Mängijad peavad kasutama oma nutikust, loogilist mõtlemist ja loovust, et aidata neil igapäevaseid väljakutseid ületada. Iga õigesti lahendatud ülesanne viib neid lähemale kadunud kingituste leidmisele ning kogu jõulumeeleolu taastamisele.</p>
     <p>Seiklus on täis põnevust, ootamatuid pöördeid ja salapärasust ning mängijatel on võimalus kogeda jõulumaagiat, kui nad aitavad Jõuluvanal ja tema ustavatel kaaslastel leida kadunud kingitusi. Kas mängijad suudavad lahendada kõik 24 mõistatuslikku ülesannet ja taastada rõõmu kogu maailma jõuludeks? Selgub vaid siis, kui nad astuvad sisse sellesse lumisesse seiklusmaailma!</p>
-    <p>Kui olete valmis aitama Jõuluvanal kingid üles leida, vajutage <a href="https://github.com/kalamaja1/joul23"><strong>siia</strong></a>.</p>
-    <p>EDIT: sorry, helistage Wilemile.</p>
+    <p>Kui olete valmis aitama Jõuluvanal kingid üles leida, vajutage <a href="http://176.112.152.202:8100/"><strong>siia</strong></a>.</p>
     <p class="christmas-tree">✲˚·.˚✲˚·.˚✲˚·.˚✲</p>
 </body>
 </html>
